--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,38 @@
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
+dist
+/dist
 node_modules
 /node_modules
-bower_components
+uploads/*.jpg
+uploads/*.png
 
-*.sublime*
+/.pnp
+.pnp.js
 
-psd
-thumb
-sketch
+# testing
+/coverage
 
-template
+# production
+/build
 
-# Environment files
+# misc
+.DS_Store
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-### visual studio dependencies ###
-*.suo
-*.ncb
-*.user
-*.aps
-*.cachefiles
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+frontend/node_modules/**
+frontend/build/**
+package-lock.json
+yarn-lock.json
+frontend/package-lock.json
+frontend/yarn-lock.json
+
+template/
